bk_ida/gccida/c3/reload_cse_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8679:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8679:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8680:4: error: expected ';' after expression
rtx v34; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8680:5: error: use of undeclared identifier 'v34'
rtx v34; // r11 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8690:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8690:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8691:4: error: expected ';' after expression
rtx v45; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8691:5: error: use of undeclared identifier 'v45'
rtx v45; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8692:4: error: expected ';' after expression
rtx offset; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8692:5: error: use of undeclared identifier 'offset'
rtx offset; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8693:6: error: use of undeclared identifier 'v47'
rtx *v47; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8697:7: error: use of undeclared identifier 'v51'
rtx **v51; // r12 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8699:6: error: use of undeclared identifier 'v53'
rtx *v53; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8730:4: error: expected ';' after expression
rtx v84; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8730:5: error: use of undeclared identifier 'v84'
rtx v84; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8745:6: error: use of undeclared identifier 'v99'
rtx *v99; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8748:4: error: expected ';' after expression
rtx v102; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8748:5: error: use of undeclared identifier 'v102'
rtx v102; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/reload1.c:8749:4: error: expected ';' after expression
rtx v103; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs/src/obj/reload1.o] Error 1
